--- a/style.css
+++ b/style.css
@@ -3,31 +3,34 @@
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
+    list-style: none;
 }
 
 /* Header */
 .Header-Content .max-width{
     display: flex;
     justify-content: space-between;
-    box-shadow: 0px 5px 6px #888888
+    box-shadow: 0px 5px 6px #888888;
 }
 .Header-Content .max-width .left-side{
     display: flex;
     justify-content: space-between;
     width: 24%;
-    padding: 20px 15px 7px 20px;
+    padding: 8px 15px 7px 20px;
     background-color: #F1FAF0;
 }
 .Header-Content .max-width .left-side .user-img img{
-    height: 72px;
-    width: 72px;
+    height: 68px;
+    width: 68px;
     border-radius: 50%;
+    box-shadow: 0px 5px 6px #777777
 }
 .Header-Content .max-width .left-side .user-info{
     text-align: right;
 }
 .Header-Content .max-width .left-side .user-info .material-icons{
     font-size: 30px;
+    cursor: pointer;
 }
 .Header-Content .max-width .left-side .user-info .name{
     font-size: 20px;
@@ -36,7 +39,7 @@
 .Header-Content .max-width .right-side{
     color: #fff;
     width: 74%;
-    padding: 50px 20px 0px 20px;
+    padding: 30px 20px 0px 20px;
     background-color: #333;
 }
 .Header-Content .max-width .right-side .today{
@@ -56,19 +59,97 @@
     flex-direction: column;
     background-color: #f1faf0e1;
     width: 351px;
-    height: 559px;
+    height: 571px;
 }
 .Section-Content .max-width .left-column ul{
-    padding: 20px 15px 7px 20px;
+    padding: 5px 1px;
 }
 .Section-Content .max-width .left-column ul li{
     display: flex;
     justify-content: space-between;
-    margin-bottom: 20px;
-    height: 20px;
+    align-items: center;
+    margin-bottom: 7px;
+    border-radius: 4px;
+    box-shadow: 0px 5px 6px #888888;
+    padding: 22px 15px;
+    cursor: pointer;
 }
-
-.Section-Content .max-width .right-column{
-    width: 925px;
-    
+.Section-Content .max-width .left-column ul li i{
+    font-size: 30px;
+    width: 30px;
+}
+.Section-Content .max-width .left-column ul li h3{
+    text-align: center;
+    font-size: 20px;
+    font-weight: 500;
+    width: 150px;
+}
+.Section-Content .max-width .left-column ul li p{
+    font-size: 16px;
+}
+.Section-Content .max-width .left-column ul li #sort-lists{
+    font-size: 20px;
+}
+.Section-Content .max-width .left-column ul .faculdade{
+    background-color: #FF9F1C;
+}
+.Section-Content .max-width .left-column ul .trabalho{
+    background-color: #F71735;
+}
+.Section-Content .max-width .left-column ul .pessoal{
+    background-color: #008148;
+}
+.Section-Content .max-width .left-column ul .react-Native{
+    background-color: #4464AD;
+}
+.Section-Content .max-width .left-column .add-List{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #e0e0e09d;
+    width: 180px;
+    margin: 130px 160px;
+    border-radius: 6px;
+    box-shadow: 0px 5px 6px #888888;
+    cursor: pointer;
+    z-index: 1;
+}
+.Section-Content .max-width .left-column .add-List p{
+    font-size: 16px;
+    padding: 10px 10px;
+}
+.Section-Content .max-width .left-column .add-List i{
+    font-size: 30px;
+    border: 2px solid #333;
+    border-radius: 50%;
+}
+.Section-Content .right-column .max-width{
+    width: 1015px;
+    height: 571px;
+}
+.Section-Content .right-column .max-width .tasks ul{
+    padding: 20px;
+    width: 950px;
+}
+.Section-Content .right-column .max-width .tasks ul li{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0px 15px;
+    height: 70px;
+    background-color: #FF9F1C;
+    margin-bottom: 10px;
+    border-radius: 6px;
+    box-shadow: 0px 5px 6px #888888;
+}
+.Section-Content .right-column .max-width .tasks ul li #radio-unchecked{
+    font-size: 23px;
+    width: 20px;
+}
+.Section-Content .right-column .max-width .tasks ul li .task{
+    font-size: 18px;
+    width: 200px;
+}
+.Section-Content .right-column .max-width .tasks ul li #start{
+    width: 400px;
 }
