--- a/style.css
+++ b/style.css
@@ -124,32 +124,35 @@
     border-radius: 50%;
 }
 .Section-Content .right-column .max-width{
-    width: 1015px;
-    height: 571px;
+    padding: 20px 20px;
 }
-.Section-Content .right-column .max-width .tasks ul{
-    padding: 20px;
-    width: 950px;
-}
-.Section-Content .right-column .max-width .tasks ul li{
+.Section-Content .right-column .max-width .tasks{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0px 15px;
-    height: 70px;
     background-color: #FF9F1C;
-    margin-bottom: 10px;
+    height: 60px;
+    width: 930px;
+    padding: 20px 20px;
     border-radius: 6px;
     box-shadow: 0px 5px 6px #888888;
 }
-.Section-Content .right-column .max-width .tasks ul li #radio-unchecked{
-    font-size: 23px;
-    width: 20px;
+.Section-Content .right-column .max-width .tasks i{
+    font-size: 25px;
 }
-.Section-Content .right-column .max-width .tasks ul li .task{
-    font-size: 18px;
-    width: 200px;
+.Section-Content .right-column .max-width .tasks #timer{
+    font-size: 27px;
 }
-.Section-Content .right-column .max-width .tasks ul li #start{
-    width: 400px;
+.Section-Content .right-column .max-width .tasks .task h4{
+    width: 840px;
+    font-size: 20px;
+    margin-bottom: 5px;
+}
+.Section-Content .right-column .max-width .tasks .task .info{
+    display: flex;
+    align-items: center;
+}
+.Section-Content .right-column .max-width .tasks .task .info p{
+    margin-right: 10px;
+    margin-left: 10px;
 }
