--- a/style.css
+++ b/style.css
@@ -10,14 +10,13 @@
 .Header-Content .max-width{
     display: flex;
     justify-content: space-between;
-    box-shadow: 0px 5px 6px #888888;
 }
 .Header-Content .max-width .left-side{
     display: flex;
     justify-content: space-between;
     width: 24%;
     padding: 8px 15px 7px 20px;
-    background-color: #F1FAF0;
+    background-color: #eeeeee;
 }
 .Header-Content .max-width .left-side .user-img img{
     height: 68px;
@@ -62,16 +61,16 @@
     height: 571px;
 }
 .Section-Content .max-width .left-column ul{
-    padding: 5px 1px;
+    padding: 5px 5px;
 }
 .Section-Content .max-width .left-column ul li{
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 7px;
+    padding: 15px 15px;
     border-radius: 4px;
     box-shadow: 0px 5px 6px #888888;
-    padding: 22px 15px;
     cursor: pointer;
 }
 .Section-Content .max-width .left-column ul li i{
@@ -80,7 +79,7 @@
 }
 .Section-Content .max-width .left-column ul li h3{
     text-align: center;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 500;
     width: 150px;
 }
@@ -123,19 +122,26 @@
     border: 2px solid #333;
     border-radius: 50%;
 }
+.Section-Content .right-column {
+    height: 571px;
+}
+
 .Section-Content .right-column .max-width{
-    padding: 20px 20px;
+    flex-direction: column;
+    margin: 10px 20px;
 }
 .Section-Content .right-column .max-width .tasks{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #FF9F1C;
-    height: 60px;
+    margin-bottom: 10px;
+    background-color: #eeeeee;
+    height: 40px;
     width: 930px;
     padding: 20px 20px;
     border-radius: 6px;
     box-shadow: 0px 5px 6px #888888;
+    cursor: pointer;
 }
 .Section-Content .right-column .max-width .tasks i{
     font-size: 25px;
@@ -145,14 +151,44 @@
 }
 .Section-Content .right-column .max-width .tasks .task h4{
     width: 840px;
-    font-size: 20px;
+    font-size: 18px;
+    font-weight: 400;
     margin-bottom: 5px;
 }
 .Section-Content .right-column .max-width .tasks .task .info{
     display: flex;
     align-items: center;
 }
+.Section-Content .right-column .max-width .tasks .task .info i{
+    font-size: 20px;
+    margin-right: 5px;
+}
+.Section-Content .right-column .max-width .tasks .task .info span{
+    font-size: 15px;
+}
 .Section-Content .right-column .max-width .tasks .task .info p{
     margin-right: 10px;
     margin-left: 10px;
+}
+.Section-Content .right-column .agenda i{
+    position: absolute;
+    font-size: 35px;
+    padding: 8px;
+    margin: 0px 850px ;
+    color: #fff;
+    background-color: #05b968;
+    border-radius: 50%;
+    box-shadow: 0px 5px 6px #888888;
+    cursor: pointer;
+}
+.Section-Content .right-column .add-task i{
+    position: absolute;
+    font-size: 35px;
+    padding: 8px;
+    margin: 65px 850px ;
+    color: #fff;
+    background-color: #05b968;
+    border-radius: 50%;
+    box-shadow: 0px 5px 6px #888888;
+    cursor: pointer;
 }
