--- a/style.css
+++ b/style.css
@@ -8,23 +8,25 @@
 
 /* Header */
 .Header-Content .max-width{
+    height: 15vh;
     display: flex;
-    justify-content: space-between;
+    background-color: #F71735;
 }
 .Header-Content .max-width .left-side{
     display: flex;
     justify-content: space-between;
-    width: 24%;
-    padding: 8px 15px 7px 20px;
+    width: 30%;
     background-color: #eeeeee;
 }
 .Header-Content .max-width .left-side .user-img img{
+    margin: 10px 15px;
     height: 68px;
     width: 68px;
     border-radius: 50%;
     box-shadow: 0px 5px 6px #777777
 }
 .Header-Content .max-width .left-side .user-info{
+    margin: 10px 15px;
     text-align: right;
 }
 .Header-Content .max-width .left-side .user-info .material-icons{
@@ -37,41 +39,47 @@
 }
 .Header-Content .max-width .right-side{
     color: #fff;
-    width: 74%;
-    padding: 30px 20px 0px 20px;
+    width: 70%;
     background-color: #333;
 }
 .Header-Content .max-width .right-side .today{
+    padding: 40px 20px 0px 20px;
     font-size: 22px;
     font-weight: 500;
 }
 .Header-Content .max-width .right-side span{
+    padding: 30px 20px 0px 20px;
     font-size: 20px;
     font-weight: 300;
 }
 
 /* Section Styling */
+
 .Section-Content .max-width{
     display: flex;
+    height: 85vh;
 }
 .Section-Content .max-width .left-column{
     flex-direction: column;
     background-color: #f1faf0e1;
-    width: 351px;
-    height: 571px;
+    width: 30%;
 }
 .Section-Content .max-width .left-column ul{
-    padding: 5px 5px;
+    padding: 5px 5px 0px 5px;
 }
 .Section-Content .max-width .left-column ul li{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 7px;
+    margin-bottom: 8px;
     padding: 15px 15px;
     border-radius: 4px;
     box-shadow: 0px 5px 6px #888888;
     cursor: pointer;
+    transition: 0.2s ease all;
+}
+.Section-Content .max-width .left-column ul li:hover{
+    transform: scale(1.03);
 }
 .Section-Content .max-width .left-column ul li i{
     font-size: 30px;
@@ -81,7 +89,7 @@
     text-align: center;
     font-size: 18px;
     font-weight: 500;
-    width: 150px;
+    width: 50%;
 }
 .Section-Content .max-width .left-column ul li p{
     font-size: 16px;
@@ -103,15 +111,18 @@
 }
 .Section-Content .max-width .left-column .add-List{
     display: flex;
-    justify-content: space-around;
     align-items: center;
     background-color: #e0e0e09d;
-    width: 180px;
-    margin: 130px 160px;
+    width: 170px;
+    margin: 20px 0px 0 120px;
     border-radius: 6px;
     box-shadow: 0px 5px 6px #888888;
     cursor: pointer;
     z-index: 1;
+    transition: all 0.2s ease;
+}
+.Section-Content .max-width .left-column .add-List:hover{
+    transform: scale(1.09);
 }
 .Section-Content .max-width .left-column .add-List p{
     font-size: 16px;
@@ -122,73 +133,120 @@
     border: 2px solid #333;
     border-radius: 50%;
 }
-.Section-Content .right-column {
-    height: 571px;
+
+.Section-Content .max-width .right-column {
+    width: 70%;
+}
+.Section-Content .max-width .right-column .max-width{
+    flex-direction: column;
+    padding: 10px 20px 0px 20px;
 }
 
-.Section-Content .right-column .max-width{
-    flex-direction: column;
-    margin: 10px 20px;
-}
-.Section-Content .right-column .max-width .tasks{
+.Section-Content .max-width .right-column .max-width .tasks{
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 10px;
+    height: 80px;
+    width: 100%;
     background-color: #eeeeee;
-    height: 40px;
-    width: 930px;
-    padding: 20px 20px;
     border-radius: 6px;
     box-shadow: 0px 5px 6px #888888;
     cursor: pointer;
 }
-.Section-Content .right-column .max-width .tasks i{
+.Section-Content .max-width .right-column .max-width .tasks #radio{
     font-size: 25px;
+    padding: 0px 20px 0px 20px;
 }
-.Section-Content .right-column .max-width .tasks #timer{
+.Section-Content .max-width .right-column .max-width .tasks #timer{
     font-size: 27px;
+    padding: 0px 20px 0px 20px;
 }
-.Section-Content .right-column .max-width .tasks .task h4{
-    width: 840px;
+.Section-Content .max-width .right-column .max-width .tasks .task{
+    width: 90%;
+}
+.Section-Content .max-width .right-column .max-width .tasks .task h4{
     font-size: 18px;
     font-weight: 400;
     margin-bottom: 5px;
 }
-.Section-Content .right-column .max-width .tasks .task .info{
+.Section-Content .max-width .right-column .max-width .tasks .task .info{
     display: flex;
     align-items: center;
 }
-.Section-Content .right-column .max-width .tasks .task .info i{
+.Section-Content .max-width .right-column .max-width .tasks .task .info i{
     font-size: 20px;
     margin-right: 5px;
 }
-.Section-Content .right-column .max-width .tasks .task .info span{
+.Section-Content .max-width .right-column .max-width .tasks .task .info span{
     font-size: 15px;
 }
-.Section-Content .right-column .max-width .tasks .task .info p{
+.Section-Content .max-width .right-column .max-width .tasks .task .info p{
     margin-right: 10px;
     margin-left: 10px;
 }
-.Section-Content .right-column .agenda i{
-    position: absolute;
-    font-size: 35px;
-    padding: 8px;
-    margin: 0px 850px ;
-    color: #fff;
-    background-color: #05b968;
-    border-radius: 50%;
-    box-shadow: 0px 5px 6px #888888;
-    cursor: pointer;
+.Section-Content .max-width .right-column .max-width .buttons{
+    display: flex;
+    justify-content: flex-end;
+    margin: 20px 0;
 }
-.Section-Content .right-column .add-task i{
-    position: absolute;
+.Section-Content .max-width .right-column .agenda i{
+    padding: 10px;
+    margin-right: 10px;
     font-size: 35px;
-    padding: 8px;
-    margin: 65px 850px ;
     color: #fff;
     background-color: #05b968;
     border-radius: 50%;
     box-shadow: 0px 5px 6px #888888;
     cursor: pointer;
+    transition: 0.2s ease all;
+}
+.Section-Content .max-width .right-column .agenda i:hover{
+    transform: scale(1.1);
+}
+.Section-Content .max-width .right-column .add-task i{
+    font-size: 35px;
+    padding: 10px;
+    color: #fff;
+    background-color: #05b968;
+    border-radius: 50%;
+    box-shadow: 0px 5px 6px #888888;
+    cursor: pointer;
+    transition: 0.2s ease all;
+}
+.Section-Content .max-width .right-column .add-task i:hover{
+    transform: scale(1.1);
+}
+
+@media (max-width: 997px){
+    .Header-Content .max-width{
+        display: block;
+        height: 26.7vh;
+    }
+    .Header-Content .max-width .left-side{
+        width: 100%;
+        justify-content: left;
+    }
+    .Header-Content .max-width .left-side .user-info{
+        text-align: left;
+        margin: 25px 5px;
+    }
+    .Header-Content .max-width .left-side .user-info .material-icons{
+        display: none;
+    }
+    .Header-Content .max-width .right-side{
+        width: 100%;
+        padding-bottom: 12px;
+    }
+    .Header-Content .max-width .right-side .today{
+        padding: 20px 20px 0px 20px;
+    }
+    .Header-Content .max-width .right-side span{
+        padding: 20px 20px 0px 20px;
+        margin-bottom: 50px;
+    }
+    .Section-Content .max-width{
+        display: flex;
+        height: 74vh;
+    }
 }
