--- a/style.css
+++ b/style.css
@@ -41,6 +41,8 @@
     color: #fff;
     width: 70%;
     background-color: #333;
+    background: linear-gradient(90deg, rgba(51,51,51,1) 0%, rgba(64,64,64,1) 100%);
+    box-shadow: 0px 3px 5px #6b6b6b;
 }
 .Header-Content .max-width .right-side .today{
     padding: 40px 20px 0px 20px;
@@ -74,7 +76,7 @@
     margin-bottom: 8px;
     padding: 15px 15px;
     border-radius: 4px;
-    box-shadow: 0px 5px 6px #888888;
+    box-shadow: 0px 3px 5px #6b6b6b;
     cursor: pointer;
     transition: 0.2s ease all;
 }
@@ -87,27 +89,33 @@
 }
 .Section-Content .max-width .left-column ul li h3{
     text-align: center;
-    font-size: 18px;
+    font-size: 19px;
     font-weight: 500;
     width: 50%;
 }
 .Section-Content .max-width .left-column ul li p{
     font-size: 16px;
+    font-weight: 500;
 }
 .Section-Content .max-width .left-column ul li #sort-lists{
     font-size: 20px;
 }
 .Section-Content .max-width .left-column ul .faculdade{
     background-color: #FF9F1C;
+    background: linear-gradient(90deg, rgba(255,159,28,1) 17%, rgba(255,192,17,1) 100%);
+    
 }
 .Section-Content .max-width .left-column ul .trabalho{
     background-color: #F71735;
+    background: linear-gradient(90deg, rgba(247,23,23,1) 17%, rgba(247,60,23,1) 100%);
 }
 .Section-Content .max-width .left-column ul .pessoal{
     background-color: #008148;
+    background: linear-gradient(90deg, rgba(0,129,72,1) 0%, rgba(0,154,86,1) 100%);
 }
 .Section-Content .max-width .left-column ul .react-Native{
     background-color: #4464AD;
+    background: linear-gradient(90deg, rgba(45,96,209,1) 0%, rgba(51,105,224,1) 100%);
 }
 .Section-Content .max-width .left-column .add-List{
     display: flex;
@@ -116,7 +124,7 @@
     width: 170px;
     margin: 20px 0px 0 120px;
     border-radius: 6px;
-    box-shadow: 0px 5px 6px #888888;
+    box-shadow: 0px 3px 5px #6b6b6b;
     cursor: pointer;
     z-index: 1;
     transition: all 0.2s ease;
@@ -151,7 +159,7 @@
     width: 100%;
     background-color: #eeeeee;
     border-radius: 6px;
-    box-shadow: 0px 5px 6px #888888;
+    box-shadow: 0px 3px 5px #6b6b6b;
     cursor: pointer;
 }
 .Section-Content .max-width .right-column .max-width .tasks #radio{
@@ -197,7 +205,7 @@
     color: #fff;
     background-color: #05b968;
     border-radius: 50%;
-    box-shadow: 0px 5px 6px #888888;
+    box-shadow: 0px 3px 5px #6b6b6b;
     cursor: pointer;
     transition: 0.2s ease all;
 }
@@ -210,7 +218,7 @@
     color: #fff;
     background-color: #05b968;
     border-radius: 50%;
-    box-shadow: 0px 5px 6px #888888;
+    box-shadow: 0px 3px 5px #6b6b6b;
     cursor: pointer;
     transition: 0.2s ease all;
 }
