--- a/style.css
+++ b/style.css
@@ -271,12 +271,11 @@
 
 .Section-Content .countdown{
     display: none;
-    width: 100%;
-    height: 85vh;
-    display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    width: 100%;
+    height: 85vh;
     margin: 0;
     padding: 0px;
     background-color: #43B05C;
@@ -366,6 +365,7 @@
 /* Form Styling */
 
 .Section-Content .form{
+    display: none;
     font-family: Arial, Helvetica, sans-serif;
     position: absolute;
     top: 50%;
@@ -394,10 +394,91 @@
     outline: none;
     font-size: 16px;
 }
+.Section-Content .form fieldset input {
+    padding-left: 10px;
+}
+.Section-Content .form fieldset #description textarea{
+    resize: none;
+}
+.Section-Content .form fieldset .inputBox ::placeholder{
+    padding-left: 5px;
+}
 .Section-Content .form fieldset .inputBox .label-input{
-    /* position: absolute; */
     pointer-events: none;
     transition: all 0.3s ease;
+}
+.Section-Content .form fieldset #new-task{
+    display: flex;
+    margin-bottom: -5px;
+}
+.Section-Content .form fieldset #new-task #icon i{
+    font-size: 25px;
+    padding-left: 5px;
+    cursor: pointer;
+}
+.Section-Content .form fieldset #new-step{
+    display: flex;
+    width: 60%;
+}
+.Section-Content .form fieldset #new-step #icon i{
+    font-size: 22px;
+    padding-right: 7px;
+    cursor: pointer;
+}
+.Section-Content .form fieldset #new-step ::placeholder{
+    font-size: 14px;
+}
+.Section-Content .form fieldset #select{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 15px;
+}
+.Section-Content .form fieldset #select option{
+    text-align: center;
+}
+.Section-Content .form fieldset #select #list,
+.Section-Content .form fieldset #select #repeat{
+    cursor: pointer;
+}
+.Section-Content .form fieldset .inputBox #description{
+    border: 1px solid #444;
+    border-radius: 6px;
+}
+.Section-Content .form fieldset #description ::placeholder{
+    padding: 5px 0 0 8px;
+}
+.Section-Content .form fieldset #agenda{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-color: #1e6ff0d8;
+    border-radius: 5px;
+    padding: 3px 0;
+    margin: 0 10%;
+    cursor: pointer;
+}
+.Section-Content .form fieldset #agenda h4{
+    color: #fff;
+    font-size: 16px;
+    font-weight: 500;
+}
+.Section-Content .form fieldset #agenda img{
+    margin-left: 10px;
+    width: 40px;
+    height: 40px;
+    background-color: #fff;
+    padding: 2px;
+    border-radius: 50%;
+}
+
+.Section-Content .form fieldset #timer{
+    height: 30px;
+    text-align: center;
+}
+.Section-Content .form fieldset #timer ::placeholder{
+    text-align: center;
+    align-items: center;
 }
 .Section-Content .form fieldset .buttons{
     display: flex;
@@ -411,6 +492,7 @@
     background-color: #fff;
     border: 1px solid red;
     border-radius: 8px;
+    cursor: pointer;
 }
 .Section-Content .form fieldset .buttons .add{
     font-size: 18px;
@@ -419,6 +501,7 @@
     background-color: #43B05C;
     border: 1px solid #43B05C;
     border-radius: 8px;
+    cursor: pointer;
 }
 
 
