--- a/style.css
+++ b/style.css
@@ -116,16 +116,20 @@
     background-color: #4464AD;
     background: linear-gradient(90deg, rgba(45,96,209,1) 0%, rgba(51,105,224,1) 100%);
 }
-.Section-Content .max-width .left-column .add-List{
+.Section-Content .max-width .left-column .new-list {
     display: flex;
+    justify-content: flex-end;
+    margin: 120px 20px;
+}
+.Section-Content .max-width .left-column .new-list .add-List{
+    display: flex;
+    justify-content: space-between;
     align-items: center;
+    width: 180px;
     background-color: #e0e0e09d;
-    width: 170px;
-    margin: 20px 0px 0 120px;
-    border-radius: 6px;
     box-shadow: 0px 3px 5px #6b6b6b;
+    border-radius: 6px;
     cursor: pointer;
-    z-index: 1;
     transition: all 0.2s ease;
 }
 .Section-Content .max-width .left-column .add-List:hover{
@@ -136,6 +140,7 @@
     padding: 10px 10px;
 }
 .Section-Content .max-width .left-column .add-List i{
+    margin-right: 10px;
     font-size: 30px;
     border: 2px solid #333;
     border-radius: 50%;
@@ -372,7 +377,7 @@
     left: 50%;
     transform: translate(-50%,-50%);
     padding: 20px;
-    width: 30%;
+    width: 400px;
     background-color: rgb(247, 247, 247);
     border: 1px solid #8888;
     border-radius: 6px;
@@ -514,7 +519,7 @@
 @media (max-width: 997px){
     .Header-Content .max-width{
         display: block;
-        height: 26.7vh;
+        height: 21.1vh;
     }
     .Header-Content .max-width .left-side{
         width: 100%;
