--- a/style.css
+++ b/style.css
@@ -550,6 +550,11 @@
     margin: 7px 3px;
     border-radius: 6px;
     box-shadow: 0px 3px 4px grey;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+.Section-Content .calendar .week .weekDay .tasks:hover{
+    transform: scale(1.05);
 }
 .Section-Content .calendar .week .weekDay .tasks i{
     font-size: 22px;
@@ -571,7 +576,7 @@
     background-color: #4464AD;
     background: linear-gradient(90deg, rgba(45,96,209,1) 0%, rgba(51,105,224,1) 100%);
 }
-.Section-Content .calendar .week .weekDay .tasks .task {
+.Section-Content .calendar .week .weekDay .tasks .task{
     flex-wrap: wrap;
     justify-content: space-between;
     padding: 5px 10px;
@@ -580,20 +585,45 @@
 .Section-Content .calendar .week .weekDay .tasks .task h4{
     font-size: 14px;
 }
+.Section-Content .calendar .week .weekDay .tasks .task .originalTask{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2px 0;
+}
+.Section-Content .calendar .week .weekDay .tasks .task .originalTask i{
+    font-size: 16px;
+    padding: 0 5px;
+}
+.Section-Content .calendar .week .weekDay .tasks .task .originalTask span{
+    font-size: 12px;
+}
+
 .Section-Content .calendar .week .weekDay .tasks .task .info{
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 3px 0 0 0;
 }
+.Section-Content .calendar .week .weekDay .tasks .task .info .list{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 .Section-Content .calendar .week .weekDay .tasks .task .info .list i{
     font-size: 16px;
+    padding: 0 3px;
 }
 .Section-Content .calendar .week .weekDay .tasks .task .info .list span{
     font-size: 12px;
+    
+}
+.Section-Content .calendar .week .weekDay .tasks .task .info p{
+    padding: 0 2px 0 5px;
 }
 .Section-Content .calendar .week .weekDay .tasks .task .info i{
     font-size: 16px;
+    padding: 0 3px;
 }
 .Section-Content .calendar .week .weekDay .tasks .task .info span{
     font-size: 12px;
