--- a/style.css
+++ b/style.css
@@ -7,48 +7,98 @@
 }
 
 /* Header */
-.Header-Content .max-width{
+.Header-Content .hcMax-width{
     height: 15vh;
     display: flex;
-    background-color: #F71735;
+    
 }
-.Header-Content .max-width .left-side{
+.Header-Content .hcMax-width .hcleft-side{
     display: flex;
     justify-content: space-between;
     width: 30%;
     background-color: #eeeeee;
+    transition: all 0.8s ease;
 }
-.Header-Content .max-width .left-side .user-img img{
-    margin: 10px 15px;
+.Header-Content .hcMax-width #minimize{
+    display: flex;
+    justify-content: space-between;
+    width: 10%;
+    background-color: #333;
+    transition: all 0.8s ease;
+}
+.Header-Content .hcMax-width .hcleft-side .user-img img{
+    margin: 12px 15px;
     height: 68px;
     width: 68px;
     border-radius: 50%;
-    box-shadow: 0px 5px 6px #777777
+    box-shadow: 0px 5px 6px #777777;
+    transition: all ease 0.8s;
 }
-.Header-Content .max-width .left-side .user-info{
+.Header-Content .hcMax-width #minimize .user-img img{
+    margin: 12px 25px;
+    height: 80px;
+    width: 80px;
+    border-radius: 50%;
+    box-shadow: none;
+    transition: all 0.8s ease;
+}
+.Header-Content .hcMax-width .hcleft-side .user-info{
     margin: 10px 15px;
     text-align: right;
 }
-.Header-Content .max-width .left-side .user-info .material-icons{
+.Header-Content .hcMax-width .hcleft-side #minimize{
+    display: none;
+    transition: all 0.8s ease;
+}
+.Header-Content .hcMax-width .hcleft-side .user-info .material-icons{
     font-size: 30px;
     cursor: pointer;
 }
-.Header-Content .max-width .left-side .user-info .name{
+.Header-Content .hcMax-width .hcleft-side .user-info .name{
     font-size: 20px;
     font-weight: 500;
 }
-.Header-Content .max-width .right-side{
+.Header-Content .hcMax-width .hcright-side{
     color: #fff;
     width: 70%;
     background-color: #333;
     background: linear-gradient(90deg, rgba(51,51,51,1) 0%, rgba(64,64,64,1) 100%);
+    transition: all 0.8s ease;
 }
-.Header-Content .max-width .right-side .today{
+.Header-Content .hcMax-width #maximize{
+    color: #fff;
+    width: 90%;
+    background-color: #333;
+    background: linear-gradient(90deg, rgba(51,51,51,1) 0%, rgba(64,64,64,1) 100%);
+    transition: all 0.8s ease;
+}
+.Header-Content .hcMax-width .hcright-side i{
+    display: none;
+    transition: all 0.8s ease;
+}
+.Header-Content .hcMax-width #maximize i{
+    display: flex;
+    font-size: 30px;
+    padding: 10px 0 0 16px;
+    cursor: pointer;
+    transition: all 0.8s ease;
+}
+.Header-Content .hcMax-width .hcright-side .today{
     padding: 40px 20px 0px 20px;
     font-size: 22px;
     font-weight: 500;
 }
-.Header-Content .max-width .right-side span{
+.Header-Content .hcMax-width #maximize .today{
+    padding: 0px 20px 0px 20px;
+    font-size: 22px;
+    font-weight: 500;
+}
+.Header-Content .hcMax-width .hcright-side span{
+    padding: 30px 20px 0px 20px;
+    font-size: 20px;
+    font-weight: 300;
+}
+.Header-Content .hcMax-width #maximize span{
     padding: 30px 20px 0px 20px;
     font-size: 20px;
     font-weight: 300;
@@ -65,9 +115,20 @@
     background-color: #f1faf0e1;
     width: 30%;
     height: 85vh;
+    transition: all 0.8s ease;
+}
+.Section-Content .max-width #minimizeLeftColumn{
+    flex-direction: column;
+    background-color: #333;
+    width: 6%;
+    height: 85vh;
+    transition: all 0.8s ease;
 }
 .Section-Content .max-width .left-column ul{
     padding: 5px 5px 0px 5px;
+}
+.Section-Content .max-width #minimizeLeftColumn ul{
+    padding: 20px 5px 0px 5px;
 }
 .Section-Content .max-width .left-column ul li{
     display: flex;
@@ -83,9 +144,26 @@
 .Section-Content .max-width .left-column ul li:hover{
     transform: scale(1.03);
 }
+.Section-Content .max-width #minimizeLeftColumn ul li{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 8px;
+    padding: 20px 15px;
+    border-radius: 4px;
+    box-shadow: none;
+    cursor: pointer;
+    transition: 0.2s ease all;
+}
+.Section-Content .max-width #minimizeLeftColumn ul li:hover{
+    transform: scale(1.03);
+}
 .Section-Content .max-width .left-column ul li i{
     font-size: 30px;
     width: 30px;
+}
+.Section-Content .max-width #minimizeLeftColumn ul li i{
+    font-size: 30px;
 }
 .Section-Content .max-width .left-column ul li h3{
     text-align: center;
@@ -93,12 +171,21 @@
     font-weight: 500;
     width: 50%;
 }
+.Section-Content .max-width #minimizeLeftColumn ul li h3{
+    display: none;
+}
 .Section-Content .max-width .left-column ul li p{
     font-size: 16px;
     font-weight: 500;
 }
+.Section-Content .max-width #minimizeLeftColumn ul li p{
+    display: none;
+}
 .Section-Content .max-width .left-column ul li #sort-lists{
     font-size: 20px;
+}
+.Section-Content .max-width #minimizeLeftColumn ul li #sort-lists{
+    display: none;
 }
 .Section-Content .max-width .left-column ul .faculdade{
     background-color: #FF9F1C;
@@ -121,6 +208,9 @@
     display: flex;
     justify-content: flex-end;
     margin: 120px 20px;
+}
+.Section-Content .max-width #minimizeLeftColumn .new-list {
+    display: none;
 }
 .Section-Content .max-width .left-column .new-list .add-List{
     display: flex;
@@ -146,17 +236,21 @@
     border: 2px solid #333;
     border-radius: 50%;
 }
-
 .Section-Content .max-width .right-column {
     width: 70%;
     height: 85vh;
+    transition: all 0.8s ease;
+}
+.Section-Content .max-width #maximizeRightColumn {
+    width: 94%;
+    height: 85vh;
+    transition: all 0.8s ease;
 }
 .Section-Content .max-width .right-column .max-width{
     flex-direction: column;
     height: 83vh;
     padding: 10px 20px 0px 20px;
 }
-
 .Section-Content .max-width .right-column .max-width .tasks{
     display: flex;
     justify-content: space-between;
@@ -250,7 +344,6 @@
     justify-content: flex-end;
     z-index: 1;
 }
-
 .Section-Content .agenda i{
     padding: 10px;
     margin-right: 10px;
@@ -377,7 +470,7 @@
 /* Form Styling */
 
 .Section-Content .form{
-    display: none;
+    display: flex;
     font-family: Arial, Helvetica, sans-serif;
     position: absolute;
     top: 50%;
@@ -492,12 +585,12 @@
     text-align: center;
     align-items: center;
 }
-.Section-Content .form fieldset .buttons{
+.Section-Content .form fieldset .newTaskButtons{
     display: flex;
     justify-content: space-between;
     padding: 0 20px;
 }
-.Section-Content .form fieldset .buttons .close{
+.Section-Content .form fieldset .newTaskButtons .close{
     font-size: 17px;
     padding: 10px 22px;
     color: red;
@@ -506,7 +599,7 @@
     border-radius: 8px;
     cursor: pointer;
 }
-.Section-Content .form fieldset .buttons .add{
+.Section-Content .form fieldset .newTaskButtons .add{
     font-size: 18px;
     padding: 10px 18px;
     color: #fff;
@@ -519,6 +612,10 @@
 /* Calendar*/
 .Section-Content .calendar{
     display: none;
+    height: 85vh;
+}
+.Section-Content #openCalendar{
+    display: flex;
     height: 85vh;
 }
 .Section-Content .calendar .week{
@@ -598,7 +695,6 @@
 .Section-Content .calendar .week .weekDay .tasks .task .originalTask span{
     font-size: 12px;
 }
-
 .Section-Content .calendar .week .weekDay .tasks .task .info{
     display: flex;
     justify-content: space-between;
