--- a/style.css
+++ b/style.css
@@ -108,32 +108,32 @@
 
 /* Section Styling */
 
-.Section-Content .max-width{
+.Section-Content .scMax-width{
     display: flex;
     height: 85vh;
     animation: opacityBtn 0.3s ease-in-out forwards;
 }
-.Section-Content .max-width .left-column{
+.Section-Content .scMax-width .left-column{
     flex-direction: column;
     background-color: #f1faf0e1;
     width: 30%;
     height: 85vh;
     transition: all 0.8s ease;
 }
-.Section-Content .max-width #minimizeLeftColumn{
+.Section-Content .scMax-width #minimizeLeftColumn{
     flex-direction: column;
     background-color: #333;
     width: 6%;
     height: 85vh;
     transition: all 0.8s ease;
 }
-.Section-Content .max-width .left-column ul{
+.Section-Content .scMax-width .left-column ul{
     padding: 5px 5px 0px 5px;
 }
-.Section-Content .max-width #minimizeLeftColumn ul{
+.Section-Content .scMax-width #minimizeLeftColumn ul{
     padding: 20px 5px 0px 5px;
 }
-.Section-Content .max-width .left-column ul li{
+.Section-Content .scMax-width .left-column ul li{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -144,10 +144,10 @@
     cursor: pointer;
     transition: 0.2s ease all;
 }
-.Section-Content .max-width .left-column ul li:hover{
+.Section-Content .scMax-width .left-column ul li:hover{
     transform: scale(1.03);
 }
-.Section-Content .max-width #minimizeLeftColumn ul li{
+.Section-Content .scMax-width #minimizeLeftColumn ul li{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -158,68 +158,68 @@
     cursor: pointer;
     transition: 0.2s ease all;
 }
-.Section-Content .max-width #minimizeLeftColumn ul li:hover{
+.Section-Content .scMax-width #minimizeLeftColumn ul li:hover{
     transform: scale(1.03);
 }
-.Section-Content .max-width .left-column ul li i{
+.Section-Content .scMax-width .left-column ul li i{
     font-size: 30px;
     width: 30px;
 }
-.Section-Content .max-width #minimizeLeftColumn ul li i{
+.Section-Content .scMax-width #minimizeLeftColumn ul li i{
     font-size: 30px;
 }
-.Section-Content .max-width .left-column ul li h3{
+.Section-Content .scMax-width .left-column ul li h3{
     text-align: center;
     font-size: 19px;
     font-weight: 500;
     width: 50%;
     animation: opacityBtn 1.2s ease forwards;
 }
-.Section-Content .max-width #minimizeLeftColumn ul li h3{
+.Section-Content .scMax-width #minimizeLeftColumn ul li h3{
     display: none;
 }
-.Section-Content .max-width .left-column ul li p{
+.Section-Content .scMax-width .left-column ul li p{
     font-size: 16px;
     font-weight: 500;
     animation: opacityBtn 1.2s ease forwards;
 }
-.Section-Content .max-width #minimizeLeftColumn ul li p{
+.Section-Content .scMax-width #minimizeLeftColumn ul li p{
     display: none;
 }
-.Section-Content .max-width .left-column ul li #sort-lists{
+.Section-Content .scMax-width .left-column ul li #sort-lists{
     font-size: 20px;
     animation: opacityBtn 1.2s ease forwards;
 }
-.Section-Content .max-width #minimizeLeftColumn ul li #sort-lists{
+.Section-Content .scMax-width #minimizeLeftColumn ul li #sort-lists{
     display: none;
 }
-.Section-Content .max-width .left-column ul .faculdade{
+.Section-Content .scMax-width .left-column ul .faculdade{
     background-color: #FF9F1C;
     background: linear-gradient(90deg, rgba(255,159,28,1) 17%, rgba(255,192,17,1) 100%);
     
 }
-.Section-Content .max-width .left-column ul .trabalho{
+.Section-Content .scMax-width .left-column ul .trabalho{
     background-color: #F71735;
     background: linear-gradient(90deg, rgba(247,23,23,1) 17%, rgba(247,60,23,1) 100%);
 }
-.Section-Content .max-width .left-column ul .pessoal{
+.Section-Content .scMax-width .left-column ul .pessoal{
     background: rgb(2,159,90);
     background: linear-gradient(90deg, rgba(2,159,90,1) 0%, rgba(3,171,97,1) 100%);     
 }
-.Section-Content .max-width .left-column ul .react-Native{
+.Section-Content .scMax-width .left-column ul .react-Native{
     background-color: #4464AD;
     background: linear-gradient(90deg, rgba(45,96,209,1) 0%, rgba(51,105,224,1) 100%);
 }
-.Section-Content .max-width .left-column .new-list {
+.Section-Content .scMax-width .left-column .new-list {
     display: flex;
     justify-content: flex-end;
     margin: 120px 20px;
     animation: opacityBtn 1.2s ease forwards;
 }
-.Section-Content .max-width #minimizeLeftColumn .new-list {
+.Section-Content .scMax-width #minimizeLeftColumn .new-list {
     display: none;
 }
-.Section-Content .max-width .left-column .new-list .add-List{
+.Section-Content .scMax-width .left-column .new-list .add-List{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -230,35 +230,35 @@
     cursor: pointer;
     transition: all 0.2s ease;
 }
-.Section-Content .max-width .left-column .add-List:hover{
+.Section-Content .scMax-width .left-column .add-List:hover{
     transform: scale(1.09);
 }
-.Section-Content .max-width .left-column .add-List p{
+.Section-Content .scMax-width .left-column .add-List p{
     font-size: 16px;
     padding: 10px 10px;
 }
-.Section-Content .max-width .left-column .add-List i{
+.Section-Content .scMax-width .left-column .add-List i{
     margin-right: 10px;
     font-size: 30px;
     border: 2px solid #333;
     border-radius: 50%;
 }
-.Section-Content .max-width .right-column {
+.Section-Content .scMax-width .right-column {
     width: 70%;
     height: 85vh;
     transition: all 0.8s ease;
 }
-.Section-Content .max-width #maximizeRightColumn {
+.Section-Content .scMax-width #maximizeRightColumn {
     width: 94%;
     height: 85vh;
     transition: all 0.8s ease;
 }
-.Section-Content .max-width .right-column .max-width{
+.Section-Content .scMax-width .right-column .max-width{
     flex-direction: column;
     height: 83vh;
     padding: 10px 20px 0px 20px;
 }
-.Section-Content .max-width .right-column .max-width .tasks{
+.Section-Content .scMax-width .right-column .max-width .tasks{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -271,79 +271,79 @@
     cursor: pointer;
     transition: all 0.3s ease;
 }
-.Section-Content .max-width .right-column .max-width .tasks:hover{
+.Section-Content .scMax-width .right-column .max-width .tasks:hover{
     transform: scale(1.01);
 }
-.Section-Content .max-width .right-column .max-width .tasks #radio{
+.Section-Content .scMax-width .right-column .max-width .tasks #radio{
     font-size: 25px;
     padding: 0px 20px 0px 20px;
 }
-.Section-Content .max-width .right-column .max-width .tasks .timer{
+.Section-Content .scMax-width .right-column .max-width .tasks .timer{
     display: flex;
     align-items: center;
 }
-.Section-Content .max-width .right-column .max-width .tasks .timer span{
+.Section-Content .scMax-width .right-column .max-width .tasks .timer span{
     text-align: right;
     font-weight: 500;
     width: 100px;
 }
-.Section-Content .max-width .right-column .max-width .tasks .timer #timer{
+.Section-Content .scMax-width .right-column .max-width .tasks .timer #timer{
     font-size: 27px;
     padding: 0px 20px 0px 20px;
     transition: all 0.2s ease;
 }
-.Section-Content .max-width .right-column .max-width .tasks #timer:hover{
+.Section-Content .scMax-width .right-column .max-width .tasks #timer:hover{
     transform: scale(1.3);
     color: #04a05a;
 }
-.Section-Content .max-width .right-column .max-width .tasks .task{
+.Section-Content .scMax-width .right-column .max-width .tasks .task{
     width: 90%;
 }
-.Section-Content .max-width .right-column .max-width .tasks .task h4{
+.Section-Content .scMax-width .right-column .max-width .tasks .task h4{
     font-size: 18px;
     font-weight: 400;
     margin-bottom: 5px;
 }
-.Section-Content .max-width .right-column .max-width .tasks .task .info{
+.Section-Content .scMax-width .right-column .max-width .tasks .task .info{
     display: flex;
     align-items: center;
 }
-.Section-Content .max-width .right-column .max-width .tasks .task .info .list{
+.Section-Content .scMax-width .right-column .max-width .tasks .task .info .list{
     display: flex;
     align-items: center;
     padding: 0px 5px;
     border-radius: 6px;
 }
-.Section-Content .max-width .right-column .max-width .tasks .task .info .list span{
+.Section-Content .scMax-width .right-column .max-width .tasks .task .info .list span{
     color: black;
 }
-.Section-Content .max-width .right-column .max-width .tasks .task .info #Faculdade{
+.Section-Content .scMax-width .right-column .max-width .tasks .task .info #Faculdade{
     background-color: #FF9F1C;
     background: linear-gradient(90deg, rgba(255,159,28,1) 17%, rgba(255,192,17,1) 100%);
     
 }
-.Section-Content .max-width .right-column .max-width .tasks .task .info #Trabalho{
+.Section-Content .scMax-width .right-column .max-width .tasks .task .info #Trabalho{
     background-color: #F71735;
     background: linear-gradient(90deg, rgba(247,23,23,1) 17%, rgba(247,60,23,1) 100%);
 }
-.Section-Content .max-width .right-column .max-width .tasks .task .info #Pessoal{
+.Section-Content .scMax-width .right-column .max-width .tasks .task .info #Pessoal{
     background: rgb(2,159,90);
     background: linear-gradient(90deg, rgba(2,159,90,1) 0%, rgba(3,171,97,1) 100%);  
 }
-.Section-Content .max-width .right-column .max-width .tasks .task .info #React-Native{
+.Section-Content .scMax-width .right-column .max-width .tasks .task .info #React-Native{
     background-color: #4464AD;
     background: linear-gradient(90deg, rgba(45,96,209,1) 0%, rgba(51,105,224,1) 100%);
 }
-.Section-Content .max-width .right-column .max-width .tasks .task .info i{
+.Section-Content .scMax-width .right-column .max-width .tasks .task .info i{
     font-size: 20px;
     margin-right: 3px;
     color: #111;
 }
-.Section-Content .max-width .right-column .max-width .tasks .task .info span{
+.Section-Content .scMax-width .right-column .max-width .tasks .task .info span{
     font-size: 15px;
     color: #333;
 }
-.Section-Content .max-width .right-column .max-width .tasks .task .info p{
+.Section-Content .scMax-width .right-column .max-width .tasks .task .info p{
     margin-right: 10px;
     margin-left: 10px;
 }
