--- a/style.css
+++ b/style.css
@@ -553,7 +553,7 @@
     display: flex;
     padding: 20px 0;
 }
-.Section-Content .form fieldset #date-time #Data{}
+/* .Section-Content .form fieldset #date-time #Data{} */
 .Section-Content .form fieldset #date-time #timeto{
     margin-left: 20px;
 }
